--- a/brident/index.html
+++ b/brident/index.html
@@ -4,14 +4,14 @@
 	<meta charset="UTF-8">
 	<title>STdesign</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/st-design2/assets/styles/magnific-popup.css">
+	<link rel="stylesheet" href="/stdesign2/assets/styles/magnific-popup.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="/st-design2/assets/styles/main.css">
+	<link rel="stylesheet" href="/stdesign2/assets/styles/main.css">
 </head>
 <body>
 	<div class="logos">
 	<div class="subname">
-		<a href="/st-design2"><span>Главная</span></a>
+		<a href="/stdesign2"><span>Главная</span></a>
 		<span>Бренд-бук</span>
 		<p>
 			1.компл : логотип, визитки (корп или индив), фирменный бланк. <br> <br>
@@ -29,7 +29,7 @@
 		<!-- 
 <a href="#" class="vis-item">
 	<div class="grid-item">
-		<img class="responsive-img vis-img" src="/st-design2/assets/images/grey.gif" data-original = /st-design2/assets/images/brident/401.jpg alt="Айдентика">
+		<img class="responsive-img vis-img" src="/stdesign2/assets/images/grey.gif" data-original = /stdesign2/assets/images/brident/401.jpg alt="Айдентика">
 		<div class="vis-item-content"></div>
 	</div>
 		
@@ -39,7 +39,7 @@
 					<span>Бренд-бук</span>
 				</div>
 				<div class="name">
-					<img class="responsive-img" src="/st-design2/assets/images/brident/401.jpg"  alt="Флаеры">
+					<img class="responsive-img" src="/stdesign2/assets/images/brident/401.jpg"  alt="Флаеры">
 					<p>Фирменный стиль</p>
 				</div>
 			</span>
@@ -48,7 +48,7 @@
  -->
 
 			<div class="grid-item">
-				<img class="responsive-img vis-img" src="/st-design2/assets/images/grey.gif" data-original = /st-design2/assets/images/brident/401.jpg alt="Айдентика">
+				<img class="responsive-img vis-img" src="/stdesign2/assets/images/grey.gif" data-original = /stdesign2/assets/images/brident/401.jpg alt="Айдентика">
 				<div class="link">
 					<p>Фирменный стиль</p>
 					<a href="https://issuu.com/41012/docs/bb_simpro_formula/1" target="_blank">https://issuu.com/41012/docs/bb_simpro_formula/1</a>
@@ -58,7 +58,7 @@
 		<!-- 
 <a href="#" class="vis-item">
 	<div class="grid-item">
-		<img class="responsive-img vis-img" src="/st-design2/assets/images/grey.gif" data-original = /st-design2/assets/images/brident/402.jpg alt="Айдентика">
+		<img class="responsive-img vis-img" src="/stdesign2/assets/images/grey.gif" data-original = /stdesign2/assets/images/brident/402.jpg alt="Айдентика">
 		<div class="vis-item-content"></div>
 	</div>
 		
@@ -68,7 +68,7 @@
 					<span>Бренд-бук</span>
 				</div>
 				<div class="name">
-					<img class="responsive-img" src="/st-design2/assets/images/brident/402.jpg"  alt="Флаеры">
+					<img class="responsive-img" src="/stdesign2/assets/images/brident/402.jpg"  alt="Флаеры">
 					<p>Бренд для логистической компании</p>
 				</div>
 			</span>
@@ -77,7 +77,7 @@
  -->
 
 			<div class="grid-item">
-				<img class="responsive-img vis-img" src="/st-design2/assets/images/grey.gif" data-original = /st-design2/assets/images/brident/402.jpg alt="Айдентика">
+				<img class="responsive-img vis-img" src="/stdesign2/assets/images/grey.gif" data-original = /stdesign2/assets/images/brident/402.jpg alt="Айдентика">
 				<div class="link">
 					<p>Бренд для логистической компании</p>
 					<a href="https://issuu.com/41012/docs/antrex_bb" target="_blank">https://issuu.com/41012/docs/antrex_bb</a>
@@ -87,7 +87,7 @@
 		<!-- 
 <a href="#" class="vis-item">
 	<div class="grid-item">
-		<img class="responsive-img vis-img" src="/st-design2/assets/images/grey.gif" data-original = /st-design2/assets/images/brident/403.jpg alt="Айдентика">
+		<img class="responsive-img vis-img" src="/stdesign2/assets/images/grey.gif" data-original = /stdesign2/assets/images/brident/403.jpg alt="Айдентика">
 		<div class="vis-item-content"></div>
 	</div>
 		
@@ -97,7 +97,7 @@
 					<span>Бренд-бук</span>
 				</div>
 				<div class="name">
-					<img class="responsive-img" src="/st-design2/assets/images/brident/403.jpg"  alt="Флаеры">
+					<img class="responsive-img" src="/stdesign2/assets/images/brident/403.jpg"  alt="Флаеры">
 					<p>Бренд бук для компании</p>
 				</div>
 			</span>
@@ -106,7 +106,7 @@
  -->
 
 			<div class="grid-item">
-				<img class="responsive-img vis-img" src="/st-design2/assets/images/grey.gif" data-original = /st-design2/assets/images/brident/403.jpg alt="Айдентика">
+				<img class="responsive-img vis-img" src="/stdesign2/assets/images/grey.gif" data-original = /stdesign2/assets/images/brident/403.jpg alt="Айдентика">
 				<div class="link">
 					<p>Бренд бук для компании</p>
 					<a href="https://issuu.com/41012/docs/bb_gw" target="_blank">https://issuu.com/41012/docs/bb_gw</a>
@@ -116,7 +116,7 @@
 		<!-- 
 <a href="#" class="vis-item">
 	<div class="grid-item">
-		<img class="responsive-img vis-img" src="/st-design2/assets/images/grey.gif" data-original = /st-design2/assets/images/brident/404.jpg alt="Айдентика">
+		<img class="responsive-img vis-img" src="/stdesign2/assets/images/grey.gif" data-original = /stdesign2/assets/images/brident/404.jpg alt="Айдентика">
 		<div class="vis-item-content"></div>
 	</div>
 		
@@ -126,7 +126,7 @@
 					<span>Бренд-бук</span>
 				</div>
 				<div class="name">
-					<img class="responsive-img" src="/st-design2/assets/images/brident/404.jpg"  alt="Флаеры">
+					<img class="responsive-img" src="/stdesign2/assets/images/brident/404.jpg"  alt="Флаеры">
 					<p>Фирменный стиль. Итальянские сумки. Производство</p>
 				</div>
 			</span>
@@ -135,7 +135,7 @@
  -->
 
 			<div class="grid-item">
-				<img class="responsive-img vis-img" src="/st-design2/assets/images/grey.gif" data-original = /st-design2/assets/images/brident/404.jpg alt="Айдентика">
+				<img class="responsive-img vis-img" src="/stdesign2/assets/images/grey.gif" data-original = /stdesign2/assets/images/brident/404.jpg alt="Айдентика">
 				<div class="link">
 					<p>Фирменный стиль. Итальянские сумки. Производство</p>
 					<a href="https://issuu.com/41012/docs/bb_titta_05" target="_blank">https://issuu.com/41012/docs/bb_titta_05</a>
@@ -145,7 +145,7 @@
 		<!-- 
 <a href="#" class="vis-item">
 	<div class="grid-item">
-		<img class="responsive-img vis-img" src="/st-design2/assets/images/grey.gif" data-original = /st-design2/assets/images/brident/405.jpg alt="Айдентика">
+		<img class="responsive-img vis-img" src="/stdesign2/assets/images/grey.gif" data-original = /stdesign2/assets/images/brident/405.jpg alt="Айдентика">
 		<div class="vis-item-content"></div>
 	</div>
 		
@@ -155,7 +155,7 @@
 					<span>Бренд-бук</span>
 				</div>
 				<div class="name">
-					<img class="responsive-img" src="/st-design2/assets/images/brident/405.jpg"  alt="Флаеры">
+					<img class="responsive-img" src="/stdesign2/assets/images/brident/405.jpg"  alt="Флаеры">
 					<p>Бренд бук для центра личностного роста "Социальный лифт"</p>
 				</div>
 			</span>
@@ -164,7 +164,7 @@
  -->
 
 			<div class="grid-item">
-				<img class="responsive-img vis-img" src="/st-design2/assets/images/grey.gif" data-original = /st-design2/assets/images/brident/405.jpg alt="Айдентика">
+				<img class="responsive-img vis-img" src="/stdesign2/assets/images/grey.gif" data-original = /stdesign2/assets/images/brident/405.jpg alt="Айдентика">
 				<div class="link">
 					<p>Бренд бук для центра личностного роста "Социальный лифт"</p>
 					<a href="https://issuu.com/41012/docs/brend_book_new_curv/1" target="_blank">https://issuu.com/41012/docs/brend_book_new_curv/1</a>
@@ -174,7 +174,7 @@
 		<!-- 
 <a href="#" class="vis-item">
 	<div class="grid-item">
-		<img class="responsive-img vis-img" src="/st-design2/assets/images/grey.gif" data-original = /st-design2/assets/images/brident/406.jpg alt="Айдентика">
+		<img class="responsive-img vis-img" src="/stdesign2/assets/images/grey.gif" data-original = /stdesign2/assets/images/brident/406.jpg alt="Айдентика">
 		<div class="vis-item-content"></div>
 	</div>
 		
@@ -184,7 +184,7 @@
 					<span>Бренд-бук</span>
 				</div>
 				<div class="name">
-					<img class="responsive-img" src="/st-design2/assets/images/brident/406.jpg"  alt="Флаеры">
+					<img class="responsive-img" src="/stdesign2/assets/images/brident/406.jpg"  alt="Флаеры">
 					<p>Книга фирменного стиля для компании LASER ARCH</p>
 				</div>
 			</span>
@@ -193,7 +193,7 @@
  -->
 
 			<div class="grid-item">
-				<img class="responsive-img vis-img" src="/st-design2/assets/images/grey.gif" data-original = /st-design2/assets/images/brident/406.jpg alt="Айдентика">
+				<img class="responsive-img vis-img" src="/stdesign2/assets/images/grey.gif" data-original = /stdesign2/assets/images/brident/406.jpg alt="Айдентика">
 				<div class="link">
 					<p>Книга фирменного стиля для компании LASER ARCH</p>
 					<a href="https://issuu.com/41012/docs/bb_la_curv/1" target="_blank">https://issuu.com/41012/docs/bb_la_curv/1</a>
@@ -231,10 +231,10 @@
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="/st-design2/assets/js/jquery.lazyload.js"></script>
-	<script src="/st-design2/assets/js/jquery.magnific-popup.min.js"></script>
-	<script src="/st-design2/assets/js/masonry.js"></script>
-	<script src="/st-design2/assets/js/main.js"></script>
+	<script src="/stdesign2/assets/js/jquery.lazyload.js"></script>
+	<script src="/stdesign2/assets/js/jquery.magnific-popup.min.js"></script>
+	<script src="/stdesign2/assets/js/masonry.js"></script>
+	<script src="/stdesign2/assets/js/main.js"></script>
 </footer>
 </body>
 
