--- a/logos/index.html
+++ b/logos/index.html
@@ -4,14 +4,14 @@
 	<meta charset="UTF-8">
 	<title>STdesign</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/st-design2/assets/styles/magnific-popup.css">
+	<link rel="stylesheet" href="/stdesign2/assets/styles/magnific-popup.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="/st-design2/assets/styles/main.css">
+	<link rel="stylesheet" href="/stdesign2/assets/styles/main.css">
 </head>
 <body>
 	<div class="logos">
 	<div class="subname">
-		<!-- <a herf="/st-design2"><span>Главная</span></a> -->
+		<!-- <a herf="/stdesign2"><span>Главная</span></a> -->
 		<span>Логотип</span>
 	</div>
 	<main class="gallery">
@@ -20,7 +20,7 @@
 			
 <a href="#" class="vis-item">
 	<div class="grid-item">
-		<img class="responsive-img vis-img" src="/st-design2/assets/images/grey.gif" data-original = /st-design2/assets/images/logos/101.jpg alt="Айдентика">
+		<img class="responsive-img vis-img" src="/stdesign2/assets/images/grey.gif" data-original = /stdesign2/assets/images/logos/101.jpg alt="Айдентика">
 		<div class="vis-item-content"></div>
 	</div>
 		
@@ -30,7 +30,7 @@
 					<span>Логотип</span>
 				</div>
 				<div class="name">
-					<img class="responsive-img" src="/st-design2/assets/images/logos/101.jpg"  alt="Флаеры">
+					<img class="responsive-img" src="/stdesign2/assets/images/logos/101.jpg"  alt="Флаеры">
 					<p>LOGO</p>
 				</div>
 			</span>
@@ -41,7 +41,7 @@
 			
 <a href="#" class="vis-item">
 	<div class="grid-item">
-		<img class="responsive-img vis-img" src="/st-design2/assets/images/grey.gif" data-original = /st-design2/assets/images/logos/102.jpg alt="Айдентика">
+		<img class="responsive-img vis-img" src="/stdesign2/assets/images/grey.gif" data-original = /stdesign2/assets/images/logos/102.jpg alt="Айдентика">
 		<div class="vis-item-content"></div>
 	</div>
 		
@@ -51,7 +51,7 @@
 					<span>Логотип</span>
 				</div>
 				<div class="name">
-					<img class="responsive-img" src="/st-design2/assets/images/logos/102.jpg"  alt="Флаеры">
+					<img class="responsive-img" src="/stdesign2/assets/images/logos/102.jpg"  alt="Флаеры">
 					<p>логотип для фирм по продажам карнизов</p>
 				</div>
 			</span>
@@ -62,7 +62,7 @@
 			
 <a href="#" class="vis-item">
 	<div class="grid-item">
-		<img class="responsive-img vis-img" src="/st-design2/assets/images/grey.gif" data-original = /st-design2/assets/images/logos/103.jpg alt="Айдентика">
+		<img class="responsive-img vis-img" src="/stdesign2/assets/images/grey.gif" data-original = /stdesign2/assets/images/logos/103.jpg alt="Айдентика">
 		<div class="vis-item-content"></div>
 	</div>
 		
@@ -72,7 +72,7 @@
 					<span>Логотип</span>
 				</div>
 				<div class="name">
-					<img class="responsive-img" src="/st-design2/assets/images/logos/103.jpg"  alt="Флаеры">
+					<img class="responsive-img" src="/stdesign2/assets/images/logos/103.jpg"  alt="Флаеры">
 					<p>логотип для Бара</p>
 				</div>
 			</span>
@@ -83,7 +83,7 @@
 			
 <a href="#" class="vis-item">
 	<div class="grid-item">
-		<img class="responsive-img vis-img" src="/st-design2/assets/images/grey.gif" data-original = /st-design2/assets/images/logos/104.jpg alt="Айдентика">
+		<img class="responsive-img vis-img" src="/stdesign2/assets/images/grey.gif" data-original = /stdesign2/assets/images/logos/104.jpg alt="Айдентика">
 		<div class="vis-item-content"></div>
 	</div>
 		
@@ -93,7 +93,7 @@
 					<span>Логотип</span>
 				</div>
 				<div class="name">
-					<img class="responsive-img" src="/st-design2/assets/images/logos/104.jpg"  alt="Флаеры">
+					<img class="responsive-img" src="/stdesign2/assets/images/logos/104.jpg"  alt="Флаеры">
 					<p>логотип. Одежда из трикотажа</p>
 				</div>
 			</span>
@@ -104,7 +104,7 @@
 			
 <a href="#" class="vis-item">
 	<div class="grid-item">
-		<img class="responsive-img vis-img" src="/st-design2/assets/images/grey.gif" data-original = /st-design2/assets/images/logos/106.jpg alt="Айдентика">
+		<img class="responsive-img vis-img" src="/stdesign2/assets/images/grey.gif" data-original = /stdesign2/assets/images/logos/106.jpg alt="Айдентика">
 		<div class="vis-item-content"></div>
 	</div>
 		
@@ -114,7 +114,7 @@
 					<span>Логотип</span>
 				</div>
 				<div class="name">
-					<img class="responsive-img" src="/st-design2/assets/images/logos/106.jpg"  alt="Флаеры">
+					<img class="responsive-img" src="/stdesign2/assets/images/logos/106.jpg"  alt="Флаеры">
 					<p>Логотип. Проектирование и строительство домов</p>
 				</div>
 			</span>
@@ -125,7 +125,7 @@
 			
 <a href="#" class="vis-item">
 	<div class="grid-item">
-		<img class="responsive-img vis-img" src="/st-design2/assets/images/grey.gif" data-original = /st-design2/assets/images/logos/107.jpg alt="Айдентика">
+		<img class="responsive-img vis-img" src="/stdesign2/assets/images/grey.gif" data-original = /stdesign2/assets/images/logos/107.jpg alt="Айдентика">
 		<div class="vis-item-content"></div>
 	</div>
 		
@@ -135,7 +135,7 @@
 					<span>Логотип</span>
 				</div>
 				<div class="name">
-					<img class="responsive-img" src="/st-design2/assets/images/logos/107.jpg"  alt="Флаеры">
+					<img class="responsive-img" src="/stdesign2/assets/images/logos/107.jpg"  alt="Флаеры">
 					<p>Логотип для морской логистической компании</p>
 				</div>
 			</span>
@@ -146,7 +146,7 @@
 			
 <a href="#" class="vis-item">
 	<div class="grid-item">
-		<img class="responsive-img vis-img" src="/st-design2/assets/images/grey.gif" data-original = /st-design2/assets/images/logos/108.jpg alt="Айдентика">
+		<img class="responsive-img vis-img" src="/stdesign2/assets/images/grey.gif" data-original = /stdesign2/assets/images/logos/108.jpg alt="Айдентика">
 		<div class="vis-item-content"></div>
 	</div>
 		
@@ -156,7 +156,7 @@
 					<span>Логотип</span>
 				</div>
 				<div class="name">
-					<img class="responsive-img" src="/st-design2/assets/images/logos/108.jpg"  alt="Флаеры">
+					<img class="responsive-img" src="/stdesign2/assets/images/logos/108.jpg"  alt="Флаеры">
 					<p>Логотип. Проектирование и строительство домов</p>
 				</div>
 			</span>
@@ -167,7 +167,7 @@
 			
 <a href="#" class="vis-item">
 	<div class="grid-item">
-		<img class="responsive-img vis-img" src="/st-design2/assets/images/grey.gif" data-original = /st-design2/assets/images/logos/109.jpg alt="Айдентика">
+		<img class="responsive-img vis-img" src="/stdesign2/assets/images/grey.gif" data-original = /stdesign2/assets/images/logos/109.jpg alt="Айдентика">
 		<div class="vis-item-content"></div>
 	</div>
 		
@@ -177,7 +177,7 @@
 					<span>Логотип</span>
 				</div>
 				<div class="name">
-					<img class="responsive-img" src="/st-design2/assets/images/logos/109.jpg"  alt="Флаеры">
+					<img class="responsive-img" src="/stdesign2/assets/images/logos/109.jpg"  alt="Флаеры">
 					<p>Логотип для провайдеров цифрового телевидения</p>
 				</div>
 			</span>
@@ -188,7 +188,7 @@
 			
 <a href="#" class="vis-item">
 	<div class="grid-item">
-		<img class="responsive-img vis-img" src="/st-design2/assets/images/grey.gif" data-original = /st-design2/assets/images/logos/110.jpg alt="Айдентика">
+		<img class="responsive-img vis-img" src="/stdesign2/assets/images/grey.gif" data-original = /stdesign2/assets/images/logos/110.jpg alt="Айдентика">
 		<div class="vis-item-content"></div>
 	</div>
 		
@@ -198,7 +198,7 @@
 					<span>Логотип</span>
 				</div>
 				<div class="name">
-					<img class="responsive-img" src="/st-design2/assets/images/logos/110.jpg"  alt="Флаеры">
+					<img class="responsive-img" src="/stdesign2/assets/images/logos/110.jpg"  alt="Флаеры">
 					<p>Логотип для парикмахерской</p>
 				</div>
 			</span>
@@ -209,7 +209,7 @@
 			
 <a href="#" class="vis-item">
 	<div class="grid-item">
-		<img class="responsive-img vis-img" src="/st-design2/assets/images/grey.gif" data-original = /st-design2/assets/images/logos/111.jpg alt="Айдентика">
+		<img class="responsive-img vis-img" src="/stdesign2/assets/images/grey.gif" data-original = /stdesign2/assets/images/logos/111.jpg alt="Айдентика">
 		<div class="vis-item-content"></div>
 	</div>
 		
@@ -219,7 +219,7 @@
 					<span>Логотип</span>
 				</div>
 				<div class="name">
-					<img class="responsive-img" src="/st-design2/assets/images/logos/111.jpg"  alt="Флаеры">
+					<img class="responsive-img" src="/stdesign2/assets/images/logos/111.jpg"  alt="Флаеры">
 					<p>Лазерная резка</p>
 				</div>
 			</span>
@@ -230,7 +230,7 @@
 			
 <a href="#" class="vis-item">
 	<div class="grid-item">
-		<img class="responsive-img vis-img" src="/st-design2/assets/images/grey.gif" data-original = /st-design2/assets/images/logos/112.jpg alt="Айдентика">
+		<img class="responsive-img vis-img" src="/stdesign2/assets/images/grey.gif" data-original = /stdesign2/assets/images/logos/112.jpg alt="Айдентика">
 		<div class="vis-item-content"></div>
 	</div>
 		
@@ -240,7 +240,7 @@
 					<span>Логотип</span>
 				</div>
 				<div class="name">
-					<img class="responsive-img" src="/st-design2/assets/images/logos/112.jpg"  alt="Флаеры">
+					<img class="responsive-img" src="/stdesign2/assets/images/logos/112.jpg"  alt="Флаеры">
 					<p>Центр личностного роста "Социальный лифт"</p>
 				</div>
 			</span>
@@ -277,10 +277,10 @@
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="/st-design2/assets/js/jquery.lazyload.js"></script>
-	<script src="/st-design2/assets/js/jquery.magnific-popup.min.js"></script>
-	<script src="/st-design2/assets/js/masonry.js"></script>
-	<script src="/st-design2/assets/js/main.js"></script>
+	<script src="/stdesign2/assets/js/jquery.lazyload.js"></script>
+	<script src="/stdesign2/assets/js/jquery.magnific-popup.min.js"></script>
+	<script src="/stdesign2/assets/js/masonry.js"></script>
+	<script src="/stdesign2/assets/js/main.js"></script>
 </footer>
 </body>
 
