--- a/printbooks/index.html
+++ b/printbooks/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="logos">
 	<div class="subname">
-		<a href="/"><span>Главная</span></a>
+		<a href="/stdesign2"><span>Главная</span></a>
 		<span>Фотокниги</span>
 	</div>
 	<main class="gallery">
