--- a/logos/index.html
+++ b/logos/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="logos">
 	<div class="subname">
-		<!-- <a herf="/stdesign2"><span>Главная</span></a> -->
+		<a herf="/stdesign2"><span>Главная</span></a>
 		<span>Логотип</span>
 	</div>
 	<main class="gallery">
